--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,21 @@
 @import "bootstrap";
 @import 'dropdowns-enhancement';
 
+
+/* GENERAL STYLES */
+
+body {
+	background: #f5f5f5;
+	padding-bottom: 20px;
+}
+
+.table {
+	background: #fff;
+}
+
+
+/* NAVBAR STYLES */
+
 .navbar {
 	background-color: #1C3F94;
   height: 100px;
@@ -45,7 +60,6 @@
 /***************************************
  * CUSTOM CSS FOR SIDE-BAR AND NAV BAR *
  **************************************/
-
 
 /*
  * Base structure
@@ -90,7 +104,7 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 105px;
+    top: 100px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -98,12 +112,17 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
+    background-color: #fff;
     border-right: 1px solid #eee;
+
+		span {
+			margin-right: 5px;
+		}
   }
 }
 
 /* Sidebar navigation */
+
 .nav-sidebar {
   margin-right: -21px; /* 20px padding + 1px border */
   margin-bottom: 20px;
@@ -128,10 +147,16 @@ body {
   padding-bottom: 20px;
   padding-top: 50px;
 }
+
+.main-wrapper {
+	padding-left: 40px;
+	padding-right: 40px;
+}
+
 @media (min-width: 768px) {
   .main {
-    padding-right: 40px;
-    padding-left: 40px;
+    padding-right: 0px;
+    padding-left: 0px;
   }
 }
 .main .page-header {
@@ -158,17 +183,22 @@ body {
   border-radius: 50%;
 }
 
-/* Sessions New Styles */
+/* SESSIONS NEW STYLES */
 
 .new-sessions-form {
+	background: #fff;
 	width: 65%;
 	margin: auto;
-	margin-top: 65px;
+	margin-top: 75px;
 	border: 1px solid #eee;
-	border-radius: 5px;
-	padding: 10px;
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+
+	.form-inputs {
+		padding: 10px 20px 10px 20px;
+	}
 
 	h2 {
+		margin-top: 0px;
 		background: #1C3F94;
 		color: white;
 		padding: 3px;
@@ -176,12 +206,19 @@ body {
 }
 
 
-/* Project Navigation */
+/* PROJECT NAVIGATION */
 
 .project-nav {
-	margin-top: 40px;
+	margin-top: 1px;
 	margin-bottom: 30px;
 	text-align: center;
+	background: #fff;
+
+	div {
+		padding-top: 5px;
+		padding-bottom: 5px;
+
+	}
 
 	a {
 		color: black;
@@ -189,18 +226,20 @@ body {
 	}
 
 	a:hover {
-		background: none;
+		div {
+			// background: #1C3F94;
+			color: #1C3F94;
+			font-weight: bold;
+
+		}
 	}
 }
 
 
 .project-active {
-	background: #1C3F94;
-
-	a {
-		color: white;
-	}
-
+	// background: #1C3F94;
+	color: #1C3F94;
+	font-weight: bold;
 }
 
 
@@ -217,4 +256,20 @@ body {
 		text-align: center;
 		font-weight: lighter;
 	}
+}
+
+
+/* FORM WRAPPER */
+
+.form-head,
+.project-heading {
+	font-weight: lighter;
+	text-align: center;
+}
+
+.form-wrapper {
+	margin: 25px 60px 0px 60px;
+	padding: 20px 35px 20px 35px;
+	background: #fff;
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
