--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,16 +52,16 @@
 <!-- Start of Side-bar -->
         <div class="col-sm-3 col-md-2 sidebar">
 
-      
+
 
           <ul class="nav nav-sidebar">
             <!-- <li class="active"><a href="#">All Projects<span class="sr-only">(current)</span></a></li> -->
             <li><%= link_to 'All projects', root_url %> </li>
-            <li><%= link_to 'Create new project', new_project_path %></li>
+            <li><%= link_to new_project_path do %> <span class="glyphicon glyphicon-plus" ></span> Create new project   <% end %></li>
           </ul>
 
           <ul class="nav nav-sidebar">
-            <li><%= link_to 'Add new staff', new_staff_registration_path %></li>
+            <li><%= link_to new_staff_registration_path do %> <span class="glyphicon glyphicon-user"></span> Add new staff  <% end %></li>
             <li><a href="">Add New Admin</a></li>
             <li><a href="">Disable User</a></li>
           </ul>
