--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,92 +1,95 @@
-<p id="notice"><%= notice %></p>
+<div class="main-wrapper">
+  <p id="notice"><%= notice %></p>
 
-<% if current_staff.admin? %>
-<h1>All Projects</h1><br>
+  <% if current_staff.admin? %>
+  <h1 class="project-heading">All Projects</h1><br>
 
-<div class="row">
-  <% @projects.each do |project| %>
-    <div class="col-md-6 box-container">
-      <div class="project-box">
-        <div class="row">
-          <div class="col-xs-3">
-            <div class="ey">
-              <h1 class="box-icon"><span class="glyphicon glyphicon-th-large"></span></h1>
-            </div>
-          </div>
-          <div class="col-xs-9">
-            <h4 class="project-title"><%= link_to project.project_title, project %></h4>
-            <h5><%= project.project_director %></h5>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  <% end %>
-</div>
-<% else %>
-
-<h1>Project assignments</h1><br>
-
-<div class="row">
-  <% @staff.projects.each do |project| %>
-    <div class="col-md-6 box-container">
-      <div class="project-box">
-        <div class="row">
-          <div class="col-xs-3">
-            <div class="ey">
-              <h1 class="box-icon"><span class="glyphicon glyphicon-th-large"></span></h1>
-            </div>
-          </div>
-          <div class="col-xs-9">
-            <h4 class="project-title"><%= link_to project.project_title, project %></h4>
-            <h5><%= project.project_director %></h5>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  <% end %>
-</div>
-
-<% end %>
-
-
-<table>
-  <thead>
-    <tr>
-      <th>Project title</th>
-      <th>Project acronym</th>
-      <th>Project director</th>
-      <th>Funding agency</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Total budget</th>
-      <th>Total amount spent</th>
-      <th>Account number</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <div class="row">
     <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.project_title %></td>
-        <td><%= project.project_acronym %></td>
-        <td><%= project.project_director %></td>
-        <td><%= project.funding_agency %></td>
-        <td><%= project.start_date %></td>
-        <td><%= project.end_date %></td>
-        <td><%= project.total_budget %></td>
-        <td><%= project.total_amount_spent %></td>
-        <td><%= project.account_number %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-md-6 box-container">
+        <div class="project-box">
+          <div class="row">
+            <div class="col-xs-3">
+              <div class="project-icon-wrapper">
+                <h1 class="box-icon"><span class="glyphicon glyphicon-th-large"></span></h1>
+              </div>
+            </div>
+            <div class="col-xs-9">
+              <h4 class="project-title"><%= link_to project.project_title, project %></h4>
+              <h5><%= project.project_director %></h5>
+            </div>
+          </div>
+
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+  <% else %>
 
-<br>
+  <h1>Project assignments</h1><br>
 
-<%= link_to 'New Project', new_project_path %>
+  <div class="row">
+    <% @staff.projects.each do |project| %>
+      <div class="col-md-6 box-container">
+        <div class="project-box">
+          <div class="row">
+            <div class="col-xs-3">
+              <div class="">
+                <h1 class="box-icon"><span class="glyphicon glyphicon-th-large"></span></h1>
+              </div>
+            </div>
+            <div class="col-xs-9">
+              <h4 class="project-title"><%= link_to project.project_title, project %></h4>
+              <h5><%= project.project_director %></h5>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  <% end %>
+
+
+  <table>
+    <thead>
+      <tr>
+        <th>Project title</th>
+        <th>Project acronym</th>
+        <th>Project director</th>
+        <th>Funding agency</th>
+        <th>Start date</th>
+        <th>End date</th>
+        <th>Total budget</th>
+        <th>Total amount spent</th>
+        <th>Account number</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @projects.each do |project| %>
+        <tr>
+          <td><%= project.project_title %></td>
+          <td><%= project.project_acronym %></td>
+          <td><%= project.project_director %></td>
+          <td><%= project.funding_agency %></td>
+          <td><%= project.start_date %></td>
+          <td><%= project.end_date %></td>
+          <td><%= project.total_budget %></td>
+          <td><%= project.total_amount_spent %></td>
+          <td><%= project.account_number %></td>
+          <td><%= link_to 'Show', project %></td>
+          <td><%= link_to 'Edit', edit_project_path(project) %></td>
+          <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <br>
+
+  <%= link_to 'New Project', new_project_path %>
+
+</div>
