--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,8 @@
-<h1>Create New Project</h1>
+<h2 class="form-head">Create New Project</h2>
+
+<div class="form-wrapper">
 
 <%= render 'form' %>
 
 <!-- <%= link_to 'Back', projects_path, class: "btn btn-danger" %> -->
+</div>
