--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -29,7 +29,8 @@
 <div class="main-wrapper">
 
   <p id="notice"><%= notice %></p>
-  <h2 class="project-heading"> <%= @project.project_title %> </h2><br>
+  <h3>Project Profile</h3>
+  <h4 class="project-heading"> <%= @project.project_title %> </h4><br>
 
   <!-- <p>
     <strong>Project acronym:</strong>
