--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -4,7 +4,10 @@
 <% @projects.each do |project| %>
 	<% @updates = Update.where(project_id: project.id) %>
 	<% @updates.reverse.each do |update| %>
-		<p> <%= update.project.project_title %> : <%= update.created_at %> : <%= update.content %> </p>
+		<p> <strong><%= update.project.project_title %></strong></p>
+		<p><%= update.created_at.strftime('%B' +" " +'%C' +", "+ '%Y' + " " + '%R') %>
+		</p>
+		<p><%= update.content %></p>
 		
 	<% end %>
 <% end %>
