--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,9 +1,7 @@
 
-
 <% if current_staff.admin? %>
+<h1 class="form-head"> Edit Financial Plan Item</h1>
   <%= render 'form' %>
 <% else %>
   <%= render 'expenditureForm' %>
 <% end %>
-
-<%= link_to 'Back', project_items_path(:project_id => params[:project_id]) %>
