--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,7 +13,7 @@
 
   <%= link_to project_items_path(@project) do %>
     <div class="col-xs-3">
-       Expenditure
+       Financial Plan
     </div>
   <% end %>
 
