--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -213,6 +213,7 @@ body {
 	margin-bottom: 30px;
 	text-align: center;
 	background: #fff;
+	width: 100%;
 
 	div {
 		padding-top: 5px;
@@ -280,6 +281,10 @@ body {
 	background: none;
 }
 
+.edit-from-project {
+	text-align: center;
+}
+
 
 
 .form-wrapper {
@@ -287,4 +292,8 @@ body {
 	padding: 20px 35px 20px 35px;
 	background: #fff;
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+
+	.btn {
+		color: white !important;
+	}
 }
