--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -11,3 +11,31 @@
     color: white;
   }
 }
+
+
+// SHOW ITEM STYLING
+.item-head {
+  text-align: center;
+  font-weight: lighter;
+}
+
+.item-info {
+  background: #fff;
+  margin: 0 40px 20px 40px;
+  padding: 15px 5px 15px 5px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  text-align: center;
+
+  span {
+    margin-left: 5px;
+  }
+}
+
+.show-item-table {
+  background: #1C3F94;
+  color: white;
+}
+
+.progress-percentage-spent {
+  background-color: #4caf50 !important;
+}
