--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -36,14 +36,36 @@
     font-weight: lighter;
 }
 
+.workplan-info {
+  background: #fff;
+  margin: 0 40px 20px 40px;
+  padding: 15px 5px 15px 5px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  text-align: center;
+
+  span {
+    margin-left: 5px;
+  }
+}
+
+.info-finished {
+  color: #4caf50;
+  font-weight: bold;
+}
+
+.info-remaining {
+  color: #039be5;
+  font-weight: bold;
+}
 
 
 // TIMELINE STYLING
 
 .timeline {
   list-style: none;
-  padding: 20px 0 20px;
+  padding: 20px 20px 20px 20px;
   position: relative;
+  background: #eee;
 }
 .timeline:before {
   top: 0;
