--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,3 +1,4 @@
-<h1>New Item</h1>
+<h1 class="form-head">Add Item to Financial Plan</h1>
+<h3 class="edit-from-project"><%= @project.project_title %></h3>
 
 <%= render 'form' %>
