--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,53 +1,63 @@
-<p id="notice"><%= notice %></p>
+<div class="main-wrapper">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Item title:</strong>
-  <%= @item.item_title %>
-</p>
-
-<p>
-  <strong>Budget:</strong>
-  <%= @item.budget %>
-</p>
-
-<p>
-  <strong>Amount spent:</strong>
-  <%= @item.amount_spent %>
-</p>
-
-<p>
-  <strong>Balance left:</strong>
-  <%= @item.balance_left %>
-</p>
-
-<p>
-  <strong>Percentage spent:</strong>
-  <%= @item.percentage_spent %>
-</p>
+  <h1 class="item-head">Item: <%= @item.item_title %></h1>
+  <h3 class="text-center"><%= @project%></h3><br>
 
 
-<table class="table">
-  <thead>
-    <th>Amount Spent</th>
-    <th>Comments</th>
-    <th>Date</th>
-  </thead>
-    <tbody>
-      <%@item.records.each do |record| %>
-      <td class="text-right"> <%= record.expenditure %> </td>
-      <td> <%= record.comments %> </td>
-      <td><%= record.created_at %> </td>
-    </tbody>
-      <% end %>
-  </table>
+  <div class="row">
+    <div class="col-md-3 workplan-info">
+      <h4>Budget:
+        <span class=""> <%= @item.budget %> </span>
+      </h4>
+    </div>
+    <div class="col-md-3 workplan-info">
+      <h4> Amount spent:
+        <span class=""> <%= @item.amount_spent %> </span>
+      </h4>
+    </div>
+    <div class="col-md-3 workplan-info">
+      <h4> Balance left:
+        <span> <%= @item.balance_left %> </span>
+      </h4>
+    </div>
+  </div><br>
+  <p>
+    <strong>Percentage spent:</strong>
 
   </p>
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped active progress-percentage-spent" role="progressbar"
+    aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= @item.percentage_spent %>%;">
+      <%= @item.percentage_spent %> %
+    </div>
+  </div>
+<br>
+
+
+
+  <table class="table">
+    <thead class="show-item-table">
+      <th class="text-right">Amount Spent</th>
+      <th class="text-center">Date</th>
+    </thead>
+      <tbody>
+        <%@item.records.each do |record| %>
+        <td class="text-right"> <%= record.expenditure %> </td>
+        <td class="text-center"><%= record.created_at %> </td>
+      </tbody>
+        <% end %>
+    </table>
+
+    </p>
 
 
 
 
 
-<%= link_to 'Edit', edit_project_item_path(:id => @item.id, :project_id => params[:project_id]) %> |
-<%= link_to 'Back', project_items_path(:project_id => params[:project_id]) %>
+  <%= link_to 'Edit', edit_project_item_path(:id => @item.id, :project_id => params[:project_id]) %> |
+  <%= link_to 'Back', project_items_path(:project_id => params[:project_id]) %>
 
-<%= link_to 'New record', new_project_item_record_path(@project.id, @item.id) %>
+  <%= link_to 'New record', new_project_item_record_path(@project.id, @item.id) %>
+
+</div>
