--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,15 +1,7 @@
 
-
+<div class="form-wrapper">
   <%= simple_form_for @task, url: project_tasks_path(@project), method: :post do |f| %>
     <%= f.error_notification %>
-
-
-
-  
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-
 
     <div class="form-inputs">
       <%= f.input :task_title %>
@@ -23,8 +15,5 @@
       <%= f.button :submit, class: "btn btn-primary" %>
     </div>
   <% end %>
-
-<br>
-  <input type="button" value="Add another text input" onClick="addInput('dynamicInput');">
 
 </div>
