--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Task</h1>
+<h1 class="form-head">Edit Task Details</h1>
 
 <%= render 'form' %>
-
-
-<%= link_to 'Back', project_tasks_path(:project_id => params[:project_id]) %>
